Added back more of the changes. I am not 100% sure I got everything so please verify I'm not missing anything.
Take note, the CSS is a bit wonky now on the index.html page now because Joel seems to need the full Twitter Bootstrap package.

Since the left header was no longer serving a purpose, I put our names there. (Authors)

--- a/Rail/Rail/static/CSS/front_page.css
+++ b/Rail/Rail/static/CSS/front_page.css
@@ -25,6 +25,20 @@ a:hover {
     position: relative;
     float: left;
 }
+.table td
+ {
+     text-align: center;
+ }
+ #map
+ {
+     height: 400px;
+     width: 100%;
+ }
+ a
+ {
+     color: #ffffff;
+     text-decoration: none;
+ }
 
 #center {
     padding: 10px 20px;
