--- a/Rail/Rail/templates/Railserve/index.html
+++ b/Rail/Rail/templates/Railserve/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <!-- Template by quackit.com -->
-<!--Login Page -->
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>RailServe Login</title>
+    <title>RailServe</title>
     {% load static %}
 
     <link rel="stylesheet" type="text/css" href={% static "./CSS/bootstrap.min.css" %}>
@@ -82,7 +81,6 @@
             </style>
 
             <h3>My Google Maps Demo</h3>
-
             Latitude: <input type="text" id="myLat" value="">
             Longitude: <input type="text" id="myLon" value="">
             <button onclick="corMap()" class="btn btn-info">Update Coordinates</button>
@@ -109,16 +107,15 @@
 
 
     <nav id="left" class="column">
-        <h3>Sort By:</h3>
+        <h3>Authors:</h3>
         <ul>
             <!--SQL Statements to provide certain ordering-->
             <!--Chronological-->
-            <li><a href="#">Date</a></li>
+            <li><a href="#">James Gowdy</a></li>
             <!--Farthest to lowest? -->
-            <li><a href="#">Distance</a></li>
-            <li><a href="#">Location</a></li>
-            <li><a href="#">Activity</a></li>
-            <li><a href="#">Inactivity</a></li>
+            <li><a href="#">Clay Cain</a></li>
+            <li><a href="#">Nathaniel Velliquette</a></li>
+            <li><a href="#">Joel Kamdem</a></li>
         </ul>
     </nav>
 
