--- a/Rail/Rail/templates/Railserve/index.html
+++ b/Rail/Rail/templates/Railserve/index.html
@@ -16,7 +16,7 @@
 
     <!--<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
     <!--<link rel="stylesheet" type="text/css" href="Bootstrap/css/bootstrap.min.css"> -->
-
+    <!--Changed-->
 
 </head>
 
