--- a/Rail/Rail/templates/Railserve/html/details1.html
+++ b/Rail/Rail/templates/Railserve/html/details1.html
@@ -25,7 +25,7 @@
 
 <div id="container">
     <main id="center" class="column">
-        <article>
+        <br>
             <h2>Welcome to Vehicle {{ device.0.id }}'s Page!</h2>
 
             <div class="container">
@@ -63,7 +63,10 @@
                 </table>
             </div>
 
-            <h3>My Google Maps Demo</h3>
+            </br>
+            </br>
+            </br>
+            <h3 align="center">Google Map</h3>
             <button onclick="corMap()" class="btn btn-info">Update Coordinates</button>
             <div id="map" style="width:100%;height:500px"></div>
             <script>
@@ -170,26 +173,18 @@
         </article>
     </main>
     <nav id="left" class="column">
-        <h3>Sort By:</h3>
+        <h3>Authors:</h3>
         <ul>
-            <!--SQL Statements to provide certain ordering-->
-            <!--Chronological-->
-            <li><a href="#">Date</a></li>
-            <!--Farthest to lowest? -->
-            <li><a href="#">Distance</a></li>
-            <li><a href="#">Location</a></li>
-            <li><a href="#">Activity</a></li>
-            <li><a href="#">Inactivity</a></li>
+            <li><a href="#">James Gowdy</a></li>
+            <li><a href="#">Clay Cain</a></li>
+            <li><a href="#">Nathaniel Velliquette</a></li>
+            <li><a href="#">Joel Kamdem</a></li>
         </ul>
 
     </nav>
     <div id="right" class="column">
-        <h3>Vehicle Selection</h3>
-        <ul>
-            <li><a href="details1.html">Vehicle 1</a></li>
-            <li><a href="details2.html">Vehicle 2</a></li>
-            <li><a href="details3.html">Vehicle 3</a></li>
-        </ul>
+        <h3>Directions</h3>
+        <p>Click the column headers to sort them</p>
     </div>
 </div>
 <div id="footer-wrapper">
