--- a/Rail/Rail/templates/Railserve/index.html
+++ b/Rail/Rail/templates/Railserve/index.html
@@ -122,10 +122,7 @@
     <nav id="left" class="column">
         <h3>Authors:</h3>
         <ul>
-            <!--SQL Statements to provide certain ordering-->
-            <!--Chronological-->
             <li><a href="#">James Gowdy</a></li>
-            <!--Farthest to lowest? -->
             <li><a href="#">Clay Cain</a></li>
             <li><a href="#">Nathaniel Velliquette</a></li>
             <li><a href="#">Joel Kamdem</a></li>
@@ -134,10 +131,10 @@
 
 
     <div id ="right" class="column">
-        <h3>Right heading</h3>
+        <h3>Directions</h3>
         <!--<p> So long as there is breath in me, that long will I persist.
         </br></br>For now I know one of the greatest principles of success; if I persist long enough I will win.</p>-->
-        <p>"Far and away the best prize that life has to offer is the chance to work hard at work worth doing."</p>
+        <p>Click the column headers to sort them</p>
     </div>
 
 
