Modified the Index.html and Views.py to make the markers work on the main page.
Signed-off-by: joel Kamdem <kamdem16@gmail.com>

--- a/Rail/Rail/templates/Railserve/index.html
+++ b/Rail/Rail/templates/Railserve/index.html
@@ -102,8 +102,10 @@
             {% load static %}
             <script src={% static "./JS/gmAPI.js" %}></script>
 
-            {% if device_list %}
-                {% for device in device_list %}
+        {%
+            if device %}
+        {%
+            for device in devices %}
                     <script>
 
                         updateDevices({{ device.position.latitude }}, {{ device.position.longitude }}, {{ device.id  }});
