--- a/Rail/Rail/templates/Railserve/html/details1.html
+++ b/Rail/Rail/templates/Railserve/html/details1.html
@@ -40,6 +40,7 @@
                     <thead>
                     <tr>
                         <th>Time</th>
+                        <th>Date</th>
                         <th>Latitude</th>
                         <th>Longitude</th>
                         <th>Distance</th>
